// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders Disabled Input correctly 1`] = `
<div>
  <div
    class="zw-input zw-input--md zw-input--radius zw-input--disabled zw-input--bordered"
  >
    <input
      class="zw-input__inner"
      disabled=""
      type="text"
      value="禁用"
    />
  </div>
</div>
`;

exports[`Input renders Input with radius correctly 1`] = `
<div>
  <div
    class="zw-input zw-input--md zw-input--radius zw-input--bordered"
  >
    <input
      class="zw-input__inner"
      placeholder="请输入"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input renders correctly with initial value 1`] = `
<div>
  <Input
    bordered={true}
    onChange={[MockFunction]}
    prefixCls="zw-input"
    shape="radius"
    type="text"
    value="hey"
  />
</div>
`;

exports[`Input renders different sizes of Input correctly 1`] = `
<div>
  <div
    class="zw-input zw-input--lg zw-input--radius zw-input--bordered"
  >
    <input
      class="zw-input__inner"
      placeholder="请输入"
      type="text"
      value=""
    />
  </div>
  <div
    class="zw-input zw-input--md zw-input--radius zw-input--bordered"
  >
    <input
      class="zw-input__inner"
      placeholder="请输入"
      type="text"
      value=""
    />
  </div>
  <div
    class="zw-input zw-input--sm zw-input--radius zw-input--bordered"
  >
    <input
      class="zw-input__inner"
      placeholder="请输入"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input renders different types of Input correctly 1`] = `
<div>
  <div
    class="zw-input zw-input--md zw-input--radius zw-input--bordered"
  >
    <input
      class="zw-input__inner"
      placeholder="请输入"
      type="text"
      value=""
    />
  </div>
  <div
    class="zw-input zw-input--textarea zw-input--radius zw-input--bordered"
  >
    <textarea
      class="zw-input__inner"
      placeholder="请输入"
      type="textarea"
    />
  </div>
</div>
`;
